<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".Stats">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>

    <TextView
        android:id="@+id/Joy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:layout_weight="1"
        android:text="@string/joy_stats" />

    <TextView
        android:id="@+id/Angry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/Angry_stats" />
    <TextView
        android:id="@+id/Surprised"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/surprised_stats" />
    <TextView
        android:id="@+id/Love"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/Love_stats" />
    <TextView
        android:id="@+id/Sad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/sad_stats" />
    <TextView
        android:id="@+id/Fear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="30sp"
        android:text="@string/Fear_stats" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>
