<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:text="@string/welcome_message"
        android:textSize="45sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="6"/>

    <Button
        android:id="@+id/today_main_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/today_main_page"
        android:onClick="changeToTodayActivity"
/>

    <Button
        android:id="@+id/history_main_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_page_history"
        android:onClick="changeToHistoryActivity"
        android:layout_weight="1"
/>

    <Button
        android:id="@+id/main_page_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_page_Stats"
        android:onClick="changeToStatsActivity"
        android:layout_weight="1"
 />

</android.support.v7.widget.LinearLayoutCompat>
